--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,5 +1,5 @@
 <%= form_tag students_path do %>
-  <label>Student</label>
+  <label>Student Form</label>
   <label>First Name:</label><br>
   <%= text_field_tag :'student[first_name]' %><br>
  
