--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,7 +1,7 @@
 <%= form_tag students_path do %>
   <label>Student Form</label>
   <label>First Name:</label><br>
-  <%= text_field_tag :'student[first_name]' %><br>
+  <%= text_field_tag :'first_name]' %><br>
  
   <label>Last Name:</label><br>
   <%= text_field_tag :'student[last_name]' %><br>
