--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -6,5 +6,5 @@
   <label>Last Name:</label><br>
   <%= text_field_tag :'last_name' %><br>
  
-  <%= submit_tag "Create Student" %>
+  <%= submit_tag "Submit Student" %>
 <% end %>
